做了些博客的样式

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>vue-blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="//cdn.bootcss.com/github-markdown-css/2.4.0/github-markdown.min.css" media="screen" title="no title" charset="utf-8">
     <script type="text/javascript">
       function initRootFontSize () {
         document.documentElement.style.fontSize = document.documentElement.clientWidth / 20 + 'px'
       }
+      initRootFontSize()
       window.onresize = initRootFontSize
     </script>
   </head>
