--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </script>
   </head>
   <body>
+    hello world
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
