--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       function initRootFontSize () {
         document.documentElement.style.fontSize = document.documentElement.clientWidth / 20 + 'px'
       }
+      console.log(123)
       initRootFontSize()
       window.onresize = initRootFontSize
     </script>
   </head>
   <body>
-    hello world
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
